<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_dark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flag" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/noFlag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NO_FLAG" />

        <RadioButton
            android:id="@+id/newTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NEW_TASK" />

        <RadioButton
            android:id="@+id/singleTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SINGLE_TOP" />

        <RadioButton
            android:id="@+id/clearTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CLEAR_TOP" />

        <RadioButton
            android:id="@+id/noHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NO_HISTORY" />

        <RadioButton
            android:id="@+id/reorderToFront"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/REORDER_TO_FRONT" />

        <RadioButton
            android:id="@+id/clearTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CLEAR_TASK" />

        <RadioButton
            android:id="@+id/taskOnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TASK_ON_HOME" />
    </RadioGroup>

    <Button
        android:id="@+id/redButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/red" />

    <Button
        android:id="@+id/greenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/green" />

    <Button
        android:id="@+id/blueButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/blue" />

</LinearLayout>